--- a/About.html
+++ b/About.html
@@ -27,10 +27,10 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="Home.html">Home</a>
+                                <a class="nav-link" href="Home.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link" href="About.html">About Us</a>
+                                <a class="nav-link active" href="About.html">About Us</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="Portfolio.html">Portfolio</a>
@@ -99,7 +99,7 @@
 
                 <div class="col-md-12"> 
                     <div class="section-b-1"></div>
-                    <div class="section-b-2"><h1 class="ps-2">Our Values</h1></div>
+                    <div class="section-b-2"><h1 class="ps-2">-------------------------Our Values</h1></div>
                     <div class="section-b-3"></div>
                 </div>
 
