--- a/About.html
+++ b/About.html
@@ -98,9 +98,7 @@
               </div>
 
                 <div class="col-md-12"> 
-                    <div class="section-b-1"></div>
-                    <div class="section-b-2"><h1 class="ps-2">-------------------------Our Values</h1></div>
-                    <div class="section-b-3"></div>
+                    <div class="section-b-2 text-center"><h1 class="ps-2">Our Values</h1></div>
                 </div>
 
                 <div class="col-md-10 mt-5">
