--- a/About.html
+++ b/About.html
@@ -98,7 +98,7 @@
               </div>
 
                 <div class="col-md-12"> 
-                    <div class="section-b-2 text-center"><h1 class="ps-2">Our Values</h1></div>
+                    <div class="text-center"><h1 class="ps-2">Our Values</h1></div>
                 </div>
 
                 <div class="col-md-10 mt-5">
