--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link" href="Home.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link active" href="About.html">About Us</a>
@@ -101,7 +101,7 @@
                     <div class="text-center"><h1 class="ps-2">Our Values</h1></div>
                 </div>
 
-                <div class="col-md-10 mt-5">
+                <div class="col-md-10 mt-2">
                     <p class="section-2-p">Our values represent what we stand for as a corporate citizen, a business partner and an employer. They inspire us and will be embodied by our employees at every level, function of our business. Our prevailing company values are</p>
                 </div>
 
