--- a/CSR.html
+++ b/CSR.html
@@ -27,7 +27,7 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="Home.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link" href="About.html">About Us</a>
