--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -27,7 +27,7 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="Home.html">Home</a>
+                                <a class="nav-link" href="Home.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link" href="About.html">About Us</a>
@@ -51,7 +51,7 @@
                                 <a class="nav-link"  href="CSR.html">CSR</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link"  href="Contact-Us.html">Contact Us</a>
+                                <a class="nav-link active"  href="Contact-Us.html">Contact Us</a>
                               </li>
                             </ul>
                           </div>
@@ -93,13 +93,13 @@
         <div class="col-md-6 ps-5 contact_form">
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
-            <input type="text" class="w-50">
+            <input type="text" class="w-md-50">
             <br>
             <label>Email Address*</label><br>
-            <input type="text" class="w-50">
+            <input type="text" class="w-md-50">
             <br>
             <label>Phone Number*</label><br>
-            <input type="text" class="w-50">
+            <input type="text" class="w-md-50">
             <br>
             <label>Message</label><br>
             <textarea name="Message" id="" class="w-50 h-25" spellcheck="true"></textarea><br>
