--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -93,16 +93,16 @@
         <div class="col-md-6 ps-5 contact_form">
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
-            <input type="text" class="w-md-50">
+            <input type="text" class="w-100">
             <br>
             <label>Email Address*</label><br>
-            <input type="text" class="w-md-50">
+            <input type="text" class="w-100">
             <br>
             <label>Phone Number*</label><br>
-            <input type="text" class="w-md-50">
+            <input type="text" class="w-100">
             <br>
             <label>Message</label><br>
-            <textarea name="Message" id="" class="w-50 h-25" spellcheck="true"></textarea><br>
+            <textarea name="Message" id="" class="w-100 h-25" spellcheck="true"></textarea><br>
             <h4>2 * <input type="number" style="width: 50px;">= 14 <i class="fa-solid fa-arrows-rotate"></i></h4>
             <button class="btn btn-info mt-3" style="width: 150px;">Submit</button>
         </div>
