--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -72,7 +72,7 @@
         <h3 class="header_pad pb-1">Contact Us</h3>
     </header>
     <!-- <section 1 start -->
-     <div class="container-fluid">
+     <div class="container">
         <div class="row">
           <div class="col-md-6 text-center con-sec1">
             <ul type="none" class="text-start">
@@ -159,8 +159,8 @@
     <!-- section 6 end  -->
 
     <!-- fotter start  -->
-     <footer class="col-md-12 bg-info" style="height: 30px;"> 
-            <p class="text-center" style="font-size: 12px; padding-top: 5px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
+     <footer class="col-md-12 bg-info"> 
+            <p class="text-center" style="font-size: 12px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
      </footer>
      <!-- <footer end -->
     </body>
