--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -90,7 +90,7 @@
 
 
 
-        <div class="col-md-6 ps-5 contact_form">
+        <div class="col-md-6 ps-5 contact_form" style="height:auto;";>
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
             <input type="text" class="w-100">
