--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -90,7 +90,7 @@
 
 
 
-        <div class="col-md-6 ps-5 contact_form" style="height:auto;";>
+        <div class="col-md-6 ps-5 contact_form">
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
             <input type="text" class="w-100">
@@ -103,7 +103,6 @@
             <br>
             <label>Message</label><br>
             <textarea name="Message" id="" class="w-100 h-25" spellcheck="true"></textarea><br>
-            <h4>2 * <input type="number" style="width: 50px;">= 14 <i class="fa-solid fa-arrows-rotate"></i></h4>
             <button class="btn btn-info mt-3" style="width: 150px;">Submit</button>
         </div>
         </div>
