--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -93,17 +93,17 @@
         <div class="col-md-6 ps-5 contact_form">
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
-            <input type="text" class="w-100">
+            <input type="text" class="w-100 form form-control">
             <br>
             <label>Email Address*</label><br>
-            <input type="text" class="w-100">
+            <input type="text" class="w-100 form form-control">
             <br>
             <label>Phone Number*</label><br>
-            <input type="text" class="w-100">
+            <input type="text" class="w-100 form form-control">
             <br>
             <label>Message</label><br>
-            <textarea name="Message" id="" class="w-100 h-25" spellcheck="true"></textarea><br>
-            <button class="btn btn-info mt-3" style="width: 150px;">Submit</button>
+            <textarea name="Message" id="" class="w-100 h-25 form form-control" spellcheck="true"></textarea><br>
+            <button class="btn btn-info mt-3 mb-3" style="width: 150px;">Submit</button>
         </div>
         </div>
      </div>
