--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -90,7 +90,7 @@
 
 
 
-        <div class="col-md-6 ps-5 contact_form">
+        <div class="col-md-6 ps-5 contact_form h-100">
             <h2 style="font-weight: lighter;">Get in With Touch Us</h2>
             <label>Name*</label><br>
             <input type="text" class="w-100 form form-control">
@@ -103,7 +103,7 @@
             <br>
             <label>Message</label><br>
             <textarea name="Message" id="" class="w-100 h-25 form form-control" spellcheck="true"></textarea><br>
-            <button class="btn btn-info mt-3 mb-3" style="width: 150px;">Submit</button>
+            <button class="btn btn-info mt-1" style="width: 150px;">Submit</button>
         </div>
         </div>
      </div>
