--- a/Contact-Us.html
+++ b/Contact-Us.html
@@ -103,7 +103,7 @@
             <br>
             <label>Message</label><br>
             <textarea name="Message" id="" class="w-100 h-25 form form-control" spellcheck="true"></textarea><br>
-            <button class="btn btn-info mt-1" style="width: 150px;">Submit</button>
+            <button class="btn btn-info mt-1 mb-2" style="width: 150px;">Submit</button>
         </div>
         </div>
      </div>
