--- a/CSR.html
+++ b/CSR.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link"  href="Careers.html">Careers</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link"  href="CSR.html">CSR</a>
+                                <a class="nav-link active"  href="CSR.html">CSR</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="Contact-Us.html">Contact Us</a>
@@ -143,8 +143,8 @@
     <!-- section 6 end  -->
 
     <!-- fotter start  -->
-     <footer class="col-md-12 bg-info" style="height: 30px;"> 
-            <p class="text-center" style="font-size: 12px; padding-top: 5px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
+     <footer class="col-md-12 bg-info""> 
+            <p class="text-center" style="font-size: 12px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
      </footer>
      <!-- <footer end -->
     </body>
