--- a/Careers.html
+++ b/Careers.html
@@ -27,7 +27,7 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="Home.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link" href="About.html">About Us</a>
@@ -45,7 +45,7 @@
                                 <a class="nav-link"  href="Newslatters.html">Newsletters</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link"  href="Careers.html">Careers</a>
+                                <a class="nav-link active" href="Careers.html">Careers</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="CSR.html">CSR</a>
@@ -155,8 +155,8 @@
     <!-- section 6 end  -->
 
     <!-- fotter start  -->
-     <footer class="col-md-12 bg-info" style="height: 30px;"> 
-            <p class="text-center" style="font-size: 12px; padding-top: 5px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
+     <footer class="col-md-12 bg-info"> 
+            <p class="text-center" style="font-size: 12px;">Copyright 2024 S J Contracts Pvt. Ltd. | All Rights Reserved | Powered by Skovian Ventures</p>
      </footer>
      <!-- <footer end -->
     </body>
