--- a/Awards.html
+++ b/Awards.html
@@ -27,7 +27,7 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 mb-lg-0">
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="index.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link" href="About.html">About Us</a>
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="Resources.html">Resources</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link" href="Awards.html">Awards</a>
+                                <a class="nav-link active" href="Awards.html">Awards</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="Newslatters.html">Newsletters</a>
