--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 pt-2 text-center">
+            <div class="col-12 text-center">
               <a href="Awards.html"><button class="btn btn-info btn-lg">View All</button></a>
             </div>
         </div>
