--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@
                     <div class="text-center"><h1 class="ps-2">Our Values</h1></div>
                 </div>
 
-                <div class="col-md-10 mt-2">
+                <div class="col-md-10">
                     <p class="section-2-p">Our values represent what we stand for as a corporate citizen, a business partner and an employer. They inspire us and will be embodied by our employees at every level, function of our business. Our prevailing company values are</p>
                 </div>
 
