--- a/About.html
+++ b/About.html
@@ -122,7 +122,7 @@
         <div class="container-fluid mt-5 mb-5">
           <div class="row">
               <div class="col-md-6">
-                  <h1 class="text-center text-info" style="font-size: 40px;">Our Vision</h1>
+                  <h1 class="text-center text-info mt-5" style="font-size: 40px;">Our Vision</h1>
                   <p style="text-align: justify; font-size: 19px;">The idea of seeing SJCPL as one of the most sought after contractor is what excites us the most. SJCPL shall be a professionally run organisation. The leadership will comprise of substantial individuals able to drive further growth in alignment to the company’s values and culture. We will have created a respectable standing in the market and will be a much sought after contractor for private as well as public sector projects. The quality of our services and the technology used will be identified as the standard benchmark for the construction industry. Employee welfare and happiness will still be a key priority. We will be the most preferred employer in the construction sector. Our employee experience will be such that all employees will feel a sense of familial attachment to the company.</p>
               </div>
               <div class="col-md-6 pr-5">
