--- a/About.html
+++ b/About.html
@@ -145,23 +145,23 @@
                     <h3 class="text-center text-white pt-3">The strength of our team is exhibited in the shared passion we have for building and the respect we show towards our colleagues.</h3>
                 </div>
 
-                <div class="col-4 p-3">
+                <div class="col-md-4 p-3">
                     <h1 class="text-center text-white">340</h1>
                     <h3 class="text-center text-white">ENGINEERING</h3>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-md-4 p-3">
                     <h1 class="text-center text-white">630</h1>
                     <h3 class="text-center text-white">OTHER TECHNICAL STAFF</h3>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-md-4 p-3">
                     <h1 class="text-center text-white">130</h1>
                     <h3 class="text-center text-white">SAFETY</h3>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-md-4 p-3">
                     <h1 class="text-center text-white">100</h1>
                     <h3 class="text-center text-white">QA/QC</h3>
                 </div>
-                <div class="col-4 p-3">
+                <div class="col-md-4 p-3">
                     <h1 class="text-center text-white">380</h1>
                     <h3 class="text-center text-white">ADMIN AND SUPPORT</h3>
                 </div>
