--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
                                 <a class="nav-link " href="index.html">Home</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link" href="About.html">About Us</a>
+                                <a class="nav-link active" href="About.html">About Us</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="Portfolio.html">Portfolio</a>
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="Resources.html">Resources</a>
                               </li>
                               <li class="nav-item nav_margin">
-                                <a class="nav-link active" href="Awards.html">Awards</a>
+                                <a class="nav-link" href="Awards.html">Awards</a>
                               </li>
                               <li class="nav-item nav_margin">
                                 <a class="nav-link"  href="Newslatters.html">Newsletters</a>
