--- a/Portfolio.html
+++ b/Portfolio.html
@@ -469,7 +469,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item" data-category="education">
             <div class="portfolio-category">Healthcare</div>
-            <img src="https://images.unsplash.com/photo-1516549655669-dfbf54c77a69?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+            <img src="https://sjcpl.in/images/project/23-3146afdd36884bdf92eaa1a180496982.webp" 
                  alt="Healthcare Facility" class="portfolio-img">
             <div class="portfolio-overlay">
               <h4>Healthcare Facility</h4>
@@ -479,7 +479,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item" data-category="education">
             <div class="portfolio-category">Education</div>
-            <img src="https://images.unsplash.com/photo-1588072432836-4d8b4e4a90b9?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+            <img src="https://sjcpl.in/images/project/31-eb256ac0bdf24967bbd57cf71f2bf527.webp" 
                  alt="University Building" class="portfolio-img">
             <div class="portfolio-overlay">
               <h4>University Building</h4>
