--- a/Resources.html
+++ b/Resources.html
@@ -171,7 +171,7 @@
         
         /* Stats Section */
         .stats-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.700), rgba(0, 0, 0, 0.700)), url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(0, 0, 0, 0.700), rgba(0, 0, 0, 0.700)), url('https://png.pngtree.com/background/20230527/original/pngtree-modern-office-building-rendering-in-realtime-picture-image_2757777.jpg');
             background-size: cover;
             background-position: center;
             color: white;
@@ -399,7 +399,7 @@
                 
                 <div class="col-lg-6">
                     <div class="formwork-card">
-                        <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="https://images.adsttc.com/media/images/6331/88ae/a153/3e1d/6a16/7795/large_jpg/haut-amsterdam-team-v-architecture_18.jpg?1664190866" 
                              alt="Aluminium Formwork" class="formwork-img">
                         <div class="formwork-content">
                             <span class="capacity-badge">Executed: 200,000+ sqm</span>
@@ -489,7 +489,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                    <img src="https://www.plm.automation.siemens.com/media/global/en/collaborative-machinery-hero-1280x720_tcm27-11175.jpg" 
                          alt="Batching Plants" class="img-fluid machinery-img">
                 </div>
             </div>
